# Portable-ros2_ws

ATech_ws/install/: local_setup.sh  setup.sh
ATech_ws/log/: latest_build
ATech_ws/src/Agrisentenel_Description/: CMakeLists.txt  package.xml
ATech_ws/src/Agrisentenel_Description/launch/: gazebo.launch.py
ATech_ws/src/Agrisentenel_Description/urdf/: agrisentenel_gazebo.xacro
ATech_ws/src/my_cpp_pkg/: CMakeLists.txt
ATech_ws/src/my_cpp_pkg/src/: Template.cpp  hello_publisher.cpp  hello_subscriber.cpp
Self-Driving-and-ROS-2-Learn-by-Doing-Odometry-Control/Section4_Locomotion/bumperbot_ws/install/: local_setup.sh  setup.sh
Self-Driving-and-ROS-2-Learn-by-Doing-Odometry-Control/Section4_Locomotion/bumperbot_ws/log/: latest_build
Self-Driving-and-ROS-2-Learn-by-Doing-Odometry-Control/Section5_Control/bumperbot_ws/install/: local_setup.sh  setup.sh
Self-Driving-and-ROS-2-Learn-by-Doing-Odometry-Control/Section5_Control/bumperbot_ws/log/: latest_build
Self-Driving/Section4_Locomotion/bumperbot_ws/install/: local_setup.sh  setup.sh
Self-Driving/Section4_Locomotion/bumperbot_ws/log/: latest_build
Self-Driving/Section5_Control/bumperbot_ws/install/: local_setup.sh  setup.sh
Self-Driving/Section5_Control/bumperbot_ws/log/: latest_build
Self-Driving/Section7_Differential_Kinematics/install/: local_setup.sh  setup.sh
Self-Driving/Section7_Differential_Kinematics/log/: latest_build
Self-Driving/Section8_TF2_Library/bumperbot_ws/install/: local_setup.sh  setup.sh
Self-Driving/Section8_TF2_Library/bumperbot_ws/log/: latest_build
(+79 files in other folders)
